Registered all the three services User Service, Hotel Service and Rating service with Eureka Discover Client

--- a/Rating Service/src/main/resources/application.properties
+++ b/Rating Service/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.application.bad_request = 403
 spring.application.responseCode = 200
 spring.application.conflict = 409
 spring.application.not_found = 404
+spring.application.name=RATING-SERVICE
+
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
