--- a/User Service/src/main/resources/application.properties
+++ b/User Service/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.application.bad_request = 403
 spring.application.responseCode = 200
 spring.application.conflict = 409
 spring.application.not_found = 404
+
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.application.name=USER-SERVICE
