--- a/Rating Service/src/main/resources/application.properties
+++ b/Rating Service/src/main/resources/application.properties
@@ -18,7 +18,4 @@ spring.application.conflict = 409
 spring.application.not_found = 404
 spring.application.name=RATING-SERVICE
 
-eureka.instance.prefer-ip-address=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import= configserver:http://localhost:8083
