Implemented the usage of the Resilliance4J for the purpose of Circuit Breaker in the case if any of the services are down

--- a/User Service/src/main/resources/application.yml
+++ b/User Service/src/main/resources/application.yml
@@ -36,3 +36,13 @@ logging:
   logback:
     rollingpolicy:
       max-file-size: 1MB
+
+management:
+  endpoints:
+      web:
+        exposure:
+          include: health
+
+  endpoint:
+    health:
+      show-details: always
