--- a/Rating Service/src/main/resources/application.yml
+++ b/Rating Service/src/main/resources/application.yml
@@ -62,3 +62,9 @@ resilience4j:
         permitted-number-of-calls-in-half-open-state: 3
         sliding-window-size: 10
         sliding-window-type: COUNT_BASED
+
+  retry:
+    instances:
+      userHotelRetry:
+        max-attempts: 3
+        wait-duration: 3s
