Implemented the usage of the Resilliance4J for the purpose of RateLimiter in the case where the requests limited for the purpose of security and performance

--- a/Rating Service/src/main/resources/application.yml
+++ b/Rating Service/src/main/resources/application.yml
@@ -68,3 +68,10 @@ resilience4j:
       userHotelRetry:
         max-attempts: 3
         wait-duration: 3s
+
+  ratelimiter:
+    instances:
+      userHotelRateLimiter:
+        limit-refresh-period: 4s
+        limit-for-period: 2
+        timeout-duration: 0s
