Implemented the Feign Client Interceptor so that the request sent from the ApiGateway has the access Token and other required attributes for the authorization and authentication.

--- a/Rating Service/src/main/resources/application.yml
+++ b/Rating Service/src/main/resources/application.yml
@@ -26,6 +26,26 @@ spring:
     show-sql: true
   config:
     import: configserver:http://localhost:8083
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://dev-51144467.okta.com/oauth2/default
+
+      client:
+        registration:
+          rating-internal:
+            provider: okta
+            authorization-grant-type: client_credentials
+            scope: internal
+            client-id: 0oaa615eho8hsHfHK5d7
+            client-secret: ksrFn7561lxiUjBHt5RtaCTSAb7BPWgpazkRgqm0
+
+        provider:
+          okta:
+            issuer-uri: https://dev-51144467.okta.com/oauth2/default
+
+
 
 logging:
   level:
@@ -75,3 +95,11 @@ resilience4j:
         limit-refresh-period: 4s
         limit-for-period: 2
         timeout-duration: 0s
+
+okta:
+  oauth2:
+    audience: api://default
+    issuer: https://dev-51144467.okta.com/oauth2/default
+    client-id: 0oaa615eho8hsHfHK5d7
+    client-secret: ksrFn7561lxiUjBHt5RtaCTSAb7BPWgpazkRgqm0
+    scopes: profile, email, openid, offline_access
